<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">hello explore your dream food</string>
    <string name="sing_in">Sing In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">sign in</string>
    <string name="daily_meal">daily meal</string>
    <string name="favourite">favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="nhom8_laptrinhdidong_gmail_com">Nhom8_laptrinhdidong@gmail.com</string>
    <string name="t_q_t_h">T Q T H</string>
    <string name="_10_00_22_00">10:00 - 22:00</string>
    <string name="_5">5.</string>
    <string name="product_name">Product Name</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
    <string name="view_more">View more</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="m_t">Mô tả</string>
    <string name="description_here">Description here</string>
    <string name="food_name">Food name</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart1">my cart</string>
    <string name="sing_inn">Đăng Nhập</string>
    <string name="emaill">Tài Khoản</string>
    <string name="passwordd">Mật Khẩu</string>
    <string name="registerr">Đăng Ký</string>
    <string name="full_namee">Họ Và Tên</string>
    <string name="phone_numberr">Số Điện Thoại</string>
    <string name="already_registeredd">Bạn đã có tài khoản</string>
    <string name="hello_explore_your_dream_foodd">Khám phá những món ăn của chúng tôi</string>
    <string name="_10_weekend_delicious_ndinner_recipess">Những món ăn ngon cuối tuần</string>
    <string name="view_moree">Xem thêm</string>
    <string name="menu_homee">Trang Chủ</string>
    <string name="daily_meall">Bữa ăn hàng ngày</string>
    <string name="favouritee">Yêu thích</string>
    <string name="my_cartt">Giỏ hàng</string>
</resources>